# gilles-subsquares

./: CMakeLists.txt  README.md
subsquares/: .clang-format  CMakeLists.txt  README.md  main.cpp  main2.cpp  subsquares.cpp  subsquares1_test.cpp  subsquares2_test.cpp
subsquares/subsquares1/: CMakeLists.txt  README.md  subsquares.cpp
subsquares/subsquares1/include/subsquares/: subsquares.h
subsquares/subsquares2/: CMakeLists.txt  subsquares.cpp
subsquares1/: CMakeLists.txt  subsquares.cpp
subsquares2/: README.md
subsquares2/include/subsquares/: subsquares.h
